--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "ansi-escapes": "^7.0.0",
     "cli-progress": "^3.12.0",
     "picocolors": "^1.1.1"
   }
