--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/blessed": "^0.1.25",
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^22.7.9",
     "prettier": "3.3.3",
@@ -18,7 +19,10 @@
   },
   "dependencies": {
     "ansi-escapes": "^7.0.0",
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.11.0",
     "cli-progress": "^3.12.0",
-    "picocolors": "^1.1.1"
+    "picocolors": "^1.1.1",
+    "systeminformation": "^5.23.5"
   }
 }
