feat: cli-dashboard 代码完善

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "npx tsc -w",
     "style": "prettier . --write"
   },
   "keywords": [],
