--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "npx tsc -w",
-    "style": "prettier . --write"
+    "style": "prettier . --write",
+    "test-unit": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,10 @@
   "devDependencies": {
     "@types/blessed": "^0.1.25",
     "@types/cli-progress": "^3.11.6",
+    "@types/cross-spawn": "^6.0.6",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^22.7.9",
+    "@types/prompts": "^2.4.9",
     "prettier": "3.3.3",
     "typescript": "^5.6.3"
   },
@@ -23,7 +27,12 @@
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
     "cli-progress": "^3.12.0",
+    "cross-spawn": "^7.0.3",
+    "execa": "^9.5.1",
+    "minimist": "^1.2.8",
     "picocolors": "^1.1.1",
-    "systeminformation": "^5.23.5"
+    "prompts": "^2.4.2",
+    "systeminformation": "^5.23.5",
+    "vitest": "^2.1.4"
   }
 }
